--- a/styles/sass/_profile.scss
+++ b/styles/sass/_profile.scss
@@ -109,7 +109,7 @@
     }
     .primaryInformationForm {
       width: 50%;
-      .primaryInfoInput {
+      .infoInput {
         background-color: $main-color3;
         border-radius: 10px;
       }
