--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -1,8 +1,5 @@
-// @import "./config";
-
 .Nav {
   @include flex(row);
-  // justify-content: flex-start;
   position: relative;
   width: 100vw;
   height: 60px;
@@ -117,14 +114,28 @@
       margin-left: 20px;
       z-index: 99;
     }
+    .logo {
+      left: 0;
+      position: absolute;
+      cursor: pointer;
+      margin-left: 100px;
+      a {
+        color: $main-black;
+        font-size: 40px;
+        text-decoration: none;
+        font-family: roboto;
+        font-weight: bolder;
+      }
+    }
     #check:checked ~ .menu {
       @include flex(column);
       transform: translateY(0);
       transition: 0.3s;
-      background-color: $main-color2;
+      background-color: #000;
       width: 100vw;
       height: 50vh;
       z-index: 98;
+      color: #fff;
       nav {
         ul {
           @include flex(column);
@@ -132,6 +143,55 @@
           li.active::after {
             display: none;
           }
+        }
+      }
+    }
+    .login_signup {
+      display: flex;
+      position: absolute;
+      right: 0;
+      margin-right: 40px;
+      .login {
+        cursor: pointer;
+        .logInBtn {
+          padding: 5px 20px;
+        }
+      }
+      cursor: pointer;
+      .signUpBtn {
+        padding: 5px 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .Nav {
+    .logo {
+      margin-left: 70px;
+      a {
+        font-size: 30px;
+      }
+    }
+    .login_signup {
+      flex-direction: column;
+      text-align: center;
+      margin-right: 20px;
+      .login {
+        cursor: pointer;
+        margin: 10px 0;
+        .logInBtn {
+          width: 100%;
+          font-size: 10px;
+        }
+      }
+      .signup {
+        width: 100%;
+        margin-left: 0;
+
+        .signUpBtn {
+          width: 100%;
+          font-size: 10px;
         }
       }
     }
