--- a/styles/sass/_recentOffers.scss
+++ b/styles/sass/_recentOffers.scss
@@ -2,21 +2,14 @@
   position: relative;
   min-height: 100vh;
   width: 100vw;
-  text-align: center;
+  .slider-container {
+    @include flex(row);
+  }
   .title {
     display: inline-block;
     width: fit-content;
     margin: 70px 0 90px 0;
-  }
-  .offers {
     width: 100%;
-    z-index: 9;
-    height: 80%;
-    @include flex(row);
-    gap: 20px;
-
-    .offer {
-      @include card();
-    }
+    text-align: center;
   }
 }
