--- a/styles/sass/_recentOffers.scss
+++ b/styles/sass/_recentOffers.scss
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 100vh;
   width: 100vw;
+  background-color: red;
   .slider-container {
     @include flex(row);
   }
