contact us pafe creation

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -16,6 +16,7 @@
 @import "./sass/offerDescription";
 @import "./sass/otherOffers";
 @import "./sass/profile";
+@import "./sass/contact";
 
 * {
   box-sizing: border-box;
