implement offer creation page basics

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -17,6 +17,7 @@
 @import "./sass/otherOffers";
 @import "./sass/profile";
 @import "./sass/contact";
+@import "./sass/createOffer";
 
 * {
   box-sizing: border-box;
