--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -69,7 +69,7 @@
         padding: 5px 30px;
         text-transform: capitalize;
         color: #fff;
-        font-family: Roboto, Helvetica, Arial, sans-serif;;
+        font-family: Roboto, Helvetica, Arial, sans-serif;
         font-size: 20px;
         font-weight: bold;
 
@@ -90,7 +90,7 @@
         font-size: 20px;
 
         color: #ff0067;
-        font-family: Roboto, Helvetica, Arial, sans-serif;;
+        font-family: Roboto, Helvetica, Arial, sans-serif;
         font-weight: bolder;
         &:hover {
           background-color: #ffb8d6d2;
@@ -128,6 +128,7 @@
       margin-top: 160px;
       box-shadow: 1px 1px 10px hsla(0, 0%, 0%, 0.176);
       width: 100%;
+      z-index: 100;
       nav {
         ul {
           @include flex(column);
@@ -183,7 +184,7 @@
         color: $main-black;
         font-size: 40px;
         text-decoration: none;
-        font-family: Roboto, Helvetica, Arial, sans-serif;;
+        font-family: Roboto, Helvetica, Arial, sans-serif;
         font-weight: bolder;
       }
     }
