--- a/styles/App.css
+++ b/styles/App.css
@@ -505,7 +505,7 @@
   position: relative;
   min-height: 100vh;
   width: 100vw;
-  background-color: red;
+  padding-left: 40px;
 }
 
 .RecentOffers .slider-container {
